# idk

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  GUI.cpp  Gizmo.h  Makefile  README.md  Shader.cpp  Shader.h  imgui.ini  main.cpp  shader_uuid_map.json  version_history.md
.github/workflows/: cloc.yml  line-count.yml
ROOT/: cube.sbx
ROOT/materials/: asd_3.material  mat1.mat
ROOT/shaders/: shader.glsl  test.glsl
assets/shaders/: StandardSurfaceShader_1.glsl
libs/ImGuizmo/: GraphEditor.cpp  ImGuizmo.cpp  ImGuizmo.h
libs/stb_image/: stb_image.cpp
shaders/: DirectionalLighting.glsl  basic.frag  basic.vert  basicFragment.glsl  basicVertex.glsl  gizmoVertex.glsl  lightingFragment.glsl  lightingVertex.glsl  wireframeFrag.glsl  wireframevert.glsl
src/: Camera.h  Cube.cpp  Cube.h  GUI.h  GameObject.cpp  GameObject.h  Initialization.cpp  Initialization.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SubGameObject.h  Triangle.cpp  Triangle.h  Utils.cpp  Utils.h  imgui.ini
src/Components/: BoundingBox.cpp  BoundingBox.h  Component.cpp  Component.h  Gizmo.cpp  Gizmo.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
src/Components/colliders/: BoxCollider.h  Collider.cpp  Collider.h  Ray.cpp  Ray.h
src/Components/rendering/: Gizmo.h
src/Editor/Core/: Entity.cpp  Entity.h  HierarchyManager.cpp  HierarchyManager.h  InspectorManager.cpp  InspectorManager.h  ProjectExplorer.cpp  ProjectExplorer.h
src/Editor/Utilities/: IconsFontAwesome6Brands.h  Selectable.h  SelectionEvent.h  SelectionManager.cpp  SelectionManager.h
src/Engine/Core/: AssetItem.cpp  AssetItem.h  AssetManager.cpp  AssetManager.h  Component.h  Core.cpp  Core.h  EngineSystems.cpp  EngineSystems.h  GameObject.cpp  GameObject.h  Initialization.cpp  Initialization.h  MainAllocator.h  SubGameObject.h
src/Engine/ECS/: Component.h  ComponentManager.h  ECScheduler.h  Entity.h  IComponentManager.h  Registry.h  TypeIndex.cpp  TypeIndex.h
src/Engine/ECS/Utils/: EngineAccess.h
src/Engine/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.h  LightManager.h
src/Engine/Physics/: BoxCollider.h  Capsule.h  CapsuleCollider.h  Collider.h  Cube.h  Cylinder.h  CylinderCollider.h  Ray.h  Sphere.h  SphereCollider.h  Texture.cpp  Texture.h
src/Engine/Physics/.cpp/: Capsule.cpp  Cube.cpp  Cylinder.cpp  Sphere.cpp  SphereCollider.cpp
src/Engine/Physics/.h/: BoxCollider.h  Capsule.h  CapsuleCollider.h  Collider.h  Cube.h  Cylinder.h  CylinderCollider.h  Ray.h  Sphere.h  SphereCollider.h
src/Engine/Rendering/: Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFilter.h  MeshRegistry.h  MeshRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
src/Engine/Rendering/Renderer/: DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  IRenderDeferred.h  IRenderForward.h  RenderSystem.h  Renderer.cpp  Renderer.h  RendererManager.h
src/Engine/SceneManagement/: CameraManager.h  HierarchyManager.cpp  HierarchyManager.h  InspectorManager.cpp  InspectorManager.h  LightManager.h  Scene.cpp  Scene.h  SceneManager.h
src/Engine/Utilities/: AssetItem.cpp  AssetItem.h  AssetManager.cpp  AssetManager.h  CameraManager.h  Common.h  DragAndDropPayload.h  FPSCounter.cpp  FPSCounter.h  IconsFontAwesome6Brands.h  Logger.h  Parser.h  Profiler.h  ProjectExplorer.cpp  ProjectExplorer.h  SelectionManager.cpp  SelectionManager.h  ShaderData.h  ShaderTemplate.h  ThreadSafeQueue.h  Tracker.h  Transform.h  assetparser.cpp  assetparser.hpp
src/editor/windows/: HierarchyManager.cpp  HierarchyManager.h  InspectorManager.cpp  InspectorManager.h  Renderer.cpp  Renderer.h  RenderingManagement.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
src/libdata/: CMakeLists.txt  libData.cpp  libData.h
src/shaders/: basic.frag  basic.vert  finalPass.frag  finalPass.vert  gizmo.frag  gizmo.vert  lightShader.frag  lightShader.vert  sky.vert
